# UR10e_welding_demo

hybrid_planning_demo/: CMakeLists.txt  package.xml
hybrid_planning_demo/src/: global_mtc_planner.cpp
processit_tasks/: CMakeLists.txt  package.xml
processit_tasks/config/: hybrid_planning_demo.yaml
processit_tasks/include/moveit/task_constructor/stages/: move_to_task_frame.h
processit_tasks/include/processit_tasks/: cartesian_task.h
processit_tasks/src/: cartesian_task.cpp  move_to_task_frame.cpp
